--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title></title>
     <link rel="shortcut icon" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="" />
     <script src="javascript/model.js"></script>
     <script src="javascript/view.js"></script>
     <script src="javascript/controller.js"></script>
   </head>
   <body>
+    <div id="app"></div>
     <script></script>
   </body>
 </html>
