--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
   </head>
   <body>
     <div id="app"></div>
-    <script></script>
+
+    <script>
+        const page = document.getElementById("app");
+        setList(model.folders.length);
+        setSong(0);
+        updateView();
+    </script>
   </body>
 </html>
