--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title></title>
-    <link rel="shortcut icon" href="" />
+    <title>Nikospiller</title>
+    <link rel="shortcut icon" href="img/gitat.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
     <script src="javascript/model.js"></script>
